adding roles
